css/responsive.css
/*Tablet or Small Desktop*/
.mobile-nav {
  display: none;
  opacity: 0;
}

.mobile-name {
  display: none;
}

.desktop-name {
  display: block;
}

@media only screen and (min-width: 400px) and (max-width: 800px) {
  /*Project*/
  .desktop-name {
    display: none;
  }

  .bowl-text {
    margin-top: calc(71% + 25px);
  }

  .close-button {
    position: absolute;
    right: 0;
    top: 50px;
  }

  .mobile-name {
    display: block;
  }

  #img1, #img2, #img3 {
    width: 100%;
    margin-left: 0;
    padding: 0;
  }

  .arrows {
    position: absolute;
    width: 100%;
    padding-top: calc(38% + 50px);
    margin-left: 0;
  }

  .left-arrow {
    float: left;
    opacity: 0.7;
  }

  .right-arrow {
    float: right;
    opacity: 0.7;
  }

  .left-arrow img {
    width: auto;
    height: 40px;
  }

  .right-arrow img {
    width: auto;
    height: 40px;
  }

  .project-description {
    min-height: 10vh;
    padding-bottom: 0px;
  }
}
@media only screen and (max-width: 400px) {
  /*Project*/
  .desktop-name {
    display: none;
  }

  .bowl-text {
    margin-top: calc(71% + 25px);
  }

  .close-button {
    position: absolute;
    right: 20px;
    top: 50px;
  }

  .mobile-name {
    display: block;
  }

  #img1, #img2, #img3 {
    width: 100%;
    margin-left: -20px;
    padding: 0;
  }

  .arrows {
    position: absolute;
    width: 100%;
    padding-top: calc(38% + 50px);
    margin-left: -20px;
  }

  .left-arrow {
    float: left;
    opacity: 0.7;
  }

  .right-arrow {
    float: right;
    opacity: 0.7;
  }

  .left-arrow img {
    width: auto;
    height: 40px;
  }

  .right-arrow img {
    width: auto;
    height: 40px;
  }

  .project-description {
    padding-bottom: 0px;
  }
}
/*mobile*/
@media only screen and (max-width: 800px) {
  .wrapper {
    padding-top: 70px;
  }

  .padding-top {
    padding-top: 25px;
  }

  .padding-bottom {
    padding-bottom: 25px;
  }

  /*Typography*/
  h1 {
    font-size: 32px;
    line-height: 38px;
  }

  h4 {
    font-size: 16px;
    line-height: 30px;
  }

  /*Nav bar*/
  .mobile-nav {
    display: block;
    position: fixed;
    width: 100vw;
    height: 50px;
    z-index: 200;
    background-color: #FFF3E0;
    opacity: 1;
  }

  .nav {
    display: none;
  }

  .menu {
    position: fixed;
    top: 16px;
    right: 20px;
    cursor: pointer;
  }

  .menu-open {
    width: 100vw;
    height: 100vh;
    background-color: #641F01;
    position: fixed;
    z-index: 1000;
    padding-top: 9vh;
    overflow-y: scroll;
  }

  .close {
    position: absolute;
    top: 16px;
    right: 20px;
    z-index: 1001;
    cursor: pointer;
  }

  .mobile-nav-link a {
    color: #FFFDFA;
    text-decoration: none;
    text-transform: uppercase;
  }

  .mobile-nav-link a:hover {
    color: #FFFDFA;
    text-decoration: underline;
  }

  .logo-lg {
    width: 150px;
    margin-left: calc(50% - 75px);
    margin-top: 15px;
  }

  .logo-sm {
    width: 70px;
    margin-left: calc(50% - 35px);
    margin-top: 12px;
  }

  /*Index*/
  .hero-img {
    width: 100%;
    padding-top: 0px;
    padding-bottom: 0px;
  }

  img.hero-img {
    width: 100%;
    margin-left: 0%;
  }

  /*Profile*/
  .bio {
    padding-top: 5px;
    padding-bottom: 0px;
  }

  /*Gallery*/
  .thumbnail-img {
    margin-bottom: 10px;
  }

  .thumbnail-parent {
    height: calc(100% - 15px);
  }

  .thumbnail-text {
    margin-top: calc(33% - 50px);
  }

  /*Footer*/
  .footer {
    padding-top: 15px;
    margin-top: 30px;
    height: 345px;
  }

  .footer-text {
    padding-top: 0;
    margin-top: 0;
  }
}

/*# sourceMappingURL=responsive.css.map */

